Fix input label alignment

--- a/src/assets/fictoan/components/Form/InputField/_InputField.scss
+++ b/src/assets/fictoan/components/Form/InputField/_InputField.scss
@@ -42,7 +42,7 @@
     background-image : url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCI+ICA8cG9seWxpbmUgcG9pbnRzPSIzLjUgMTIuNSA4LjUgMTcuNSAyMC41IDUuNSIgZmlsbD0ibm9uZSIgc3Ryb2tlPSIjMGVjMDVjIiBzdHJva2UtbWl0ZXJsaW1pdD0iMTAiIHN0cm9rZS13aWR0aD0iMiIvPjwvc3ZnPg==);
 }
 
-.ff-input:invalid,
+.ff-input.invalid,
 .ff-input:invalid:not(:focus):not(:placeholder-shown) {
     border           : 1px solid $inputBorder-InvalidColor;
     background-color : rgba($colorRed, 0.24);
